# ai-quantum

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  sample_alert.json
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/sessions/: 101c7ff9-a6da-4286-96d1-187e448ef6b5.json
.omc/state/: agent-replay-101c7ff9-a6da-4286-96d1-187e448ef6b5.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
_bmad/: config.toml  config.user.toml
_bmad-output/: 1-1-web3-rpc-websocket-connection.md  QuantumRadar-Sprint-Tracker.xlsx  epics.md  prfaq-mps-defi-risk.md  sprint-status.yaml
_bmad-output/implementation-artifacts/: 0-1-tick-data-json-schema.md  0-2-graph-object-json-schema.md  0-3-fragility-payload-schema.md  0-4-historical-backtest-fixtures.md  0-5-mock-websocket-server.md  0-6-mock-wss-real-abi-logs.md  1A-1-env-secrets-loader.md  1A-2-asyncweb3-client-wrapper.md  1A-3-exponential-backoff-reconnector.md  1A-4-newheads-subscription.md  1A-5-heartbeat-metrics.md  1B-1-uniswap-v3-event-decoder.md  1B-2-aave-v3-event-decoder.md  1B-3-contract-address-whitelist.md  1B-4-event-router-normalizer.md  1C-1-ring-buffer-interface.md  1C-2-deque-ring-buffer.md  1C-3-numpy-static-array-variant.md  1C-4-asyncio-safe-wrapper.md  1D-1-csv-schema-mapping.md  1D-2-csv-streamer.md  1D-3-backtest-replay-driver.md  1E-1-pipeline-orchestrator.md  1R-3-ground-truth-labeling.md  (+11 more)
contracts/: fragility_alert.schema.json  graph_snapshot.schema.json  tick_data.schema.json
core/: ring_buffer.py
docs/: environment_setup.md  git_workflow.md  usage_guide.md
ingestion/: __init__.py  client.py  config.py  csv_loader.py  metrics.py  pipeline.py  reconnect.py  router.py  streams.py  whitelist.py  whitelist.yaml
research/: data_sources.md  ground_truth_labeling.md  schema_abi_gap.md
scripts/: validate_payload.py
tools/: __init__.py  extract_fixtures.py  profile_quality.py  reconcile_etherscan.py  verify_fixtures.py  webhook_echo.py
(+86 files in other folders)
