[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumradar"
version = "0.0.1"
description = "QuantumRadar — DeFi systemic risk API powered by Matrix Product State tensor networks."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "QuantumRadar Team" }]
dependencies = [
    "jsonschema>=4.20.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "web3>=6.11",
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "ingestion*"]
exclude = ["tests*", "contracts*", "fixtures*", "_bmad*", "_bmad-output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --tb=short"
asyncio_mode = "auto"
