[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumradar"
version = "0.0.1"
description = "QuantumRadar — DeFi systemic risk API powered by Matrix Product State tensor networks."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "QuantumRadar Team" }]
dependencies = [
    "jsonschema>=4.20.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "web3>=7.0",
    "prometheus-client>=0.19",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "matplotlib>=3.8",  # data-quality report charts (Story 1E.3; render_html degrades without it)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "ingestion*"]
exclude = ["tests*", "contracts*", "fixtures*", "_bmad*", "_bmad-output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --tb=short"
asyncio_mode = "auto"
